--- a/SalesWeb/Views/Sellers/Create.cshtml
+++ b/SalesWeb/Views/Sellers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SalesWeb.Models.Seller
+﻿@model SalesWeb.Models.ViewModels.SellerFormViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -15,16 +15,19 @@
         <form asp-action="Create">
             <div class="form-group">
                 <strong>
-                    <label asp-for="Name" class="col-form-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <label asp-for="Email" class="col-form-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <label asp-for="BirthDate" class="col-form-label"></label>
-                    <input asp-for="BirthDate" class="form-control" />
-                    <label asp-for="BaseSalary" class="col-form-label"></label>
-                    <input asp-for="BaseSalary" class="form-control" />
+                    <label asp-for="Seller.Name" class="col-form-label"></label>
+                    <input asp-for="Seller.Name" class="form-control" />
+                    <label asp-for="Seller.Email" class="col-form-label"></label>
+                    <input asp-for="Seller.Email" class="form-control" />
+                    <label asp-for="Seller.BirthDate" class="col-form-label"></label>
+                    <input asp-for="Seller.BirthDate" class="form-control" />
+                    <label asp-for="Seller.BaseSalary" class="col-form-label"></label>
+                    <input asp-for="Seller.BaseSalary" class="form-control" />
                 </strong>
             </div>
+            <div class="form-group">
+                <label asp-for="Seller.DepartmentId" class="col-form-label"></label>
+                <Select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></Select>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-secondary" />
             </div>
