--- a/SalesWeb/Views/Sellers/Edit.cshtml
+++ b/SalesWeb/Views/Sellers/Edit.cshtml
@@ -14,25 +14,41 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <input type="hidden" asp-for="Seller.Id" />
-            <div class="form-group">
-                <strong>
+            <strong>
+                <div class="form-group">
                     <label asp-for="Seller.Name" class="col-form-label"></label>
                     <input asp-for="Seller.Name" class="form-control" />
+                    <span asp-validation-for="Seller.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Seller.Email" class="col-form-label"></label>
                     <input asp-for="Seller.Email" class="form-control" />
+                    <span asp-validation-for="Seller.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Seller.BirthDate" class="col-form-label"></label>
                     <input asp-for="Seller.BirthDate" class="form-control" />
+                    <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Seller.BaseSalary" class="col-form-label"></label>
                     <input asp-for="Seller.BaseSalary" class="form-control" />
-                </strong>
-            </div>
-            <div class="form-group">
-                <label asp-for="Seller.DepartmentId" class="col-form-label"></label>
-                <Select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></Select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-secondary" />
-            </div>
+                    <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>
+
+                </div>
+                <div class="form-group">
+                    <label asp-for="Seller.DepartmentId" class="col-form-label"></label>
+                    <Select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></Select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-secondary" />
+                </div>
+            </strong>
         </form>
     </div>
 </div>
+@section Scripts{
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
+}
